# mini-iso-tools

./: .gitignore  Makefile  README.md  args.c  args.h  common.c  common.h  json.c  json.h  main.c  meson.build
.github/workflows/: build.yaml  cla-check.yaml
debian/: changelog  control  copyright  mini-iso-tools.install  mini-iso-tools.lintian-overrides  rules
hooks/: mini-iso-tools
scripts/: 30mini-iso-menu  build-depends.py  iso-menu-session  test-in-lxd.sh
scripts/checksum-device/: checksum-device
scripts/regions/: Makefile  get_memmap_directive
scripts/regions/test/: proc-iomem  test.bats
test/: find-largest-reversed.json  find-largest-simple.json  meson.build  test_args.c  test_json.c  tests.c  ubuntu-server.json
test/data/: com.ubuntu.cdimage.daily:ubuntu.json  com.ubuntu.releases:ubuntu-server.json  com.ubuntu.releases:ubuntu.json
